test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-15 21:18:09.594992

